CLOUDSTACK-3104: Fix view all button alignment in IE

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -2108,6 +2108,7 @@ div.detail-group.actions td {
   display: block;
   width: 99%;
   border-bottom: 1px solid #AAAAAA;
+  float: left;
 }
 
 .detail-group table td.detail-actions .action.text {
